fix focus ring always visible on dark mode checkboxes

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -62,9 +62,13 @@ html, body, #root {
     background-color: var(--bs-primary);
     color: black;
   }
-  .form-check-input:checked {
-    box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
-    filter: invert(1);
+  .form-check-input {
+    &:focus {
+      box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
+    }
+    &:checked {
+      filter: invert(1);
+    }
   }
 }
 
